fixes + calcrag credits + jdk 11 support + bundling